2004-06-13  Daniel Berlin  <dberlin@dberlin.org>

Fix PR tree-optimization/15979
	Fix PR tree-optimization/15981
	* tree-ssa-pre.c (insert_aux): Fix faulty logic so that we don't
	try to insert values undefined along some path.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@83076 138bc75d-0d04-0410-961f-82ee72b054a4